# mcp-pdf-reader

./: .gitignore  LICENSE  README.md  cursor-rule-example.mdc  pdf_converter.py  pyproject.toml  server.py
