[project]
name = "mcp-pdf-reader"
version = "0.1.0"
description = "Local MCP server that extract text from PDF files"
readme = "README.md"
requires-python = ">=3.12.10"
dependencies = [
    "docling>=2.43.0",
    "mcp[cli]>=1.12.3",
    "pypdfium2>=4.30.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.7",
]
